version/0.12/_sources/api/ansys/geometry/core/_grpc/_services/base/bodies/GRPCBodyService.rst.txt






:class:`GRPCBodyService`
========================


.. py:class:: ansys.geometry.core._grpc._services.base.bodies.GRPCBodyService(channel: grpc.Channel)

   Bases: :py:obj:`abc.ABC`


   
   Body service for gRPC communication with the Geometry server.


   :Parameters:

       **channel** : :obj:`grpc.Channel`
           The gRPC channel to the server.














   ..
       !! processed by numpydoc !!

















































.. py:currentmodule:: GRPCBodyService

Overview
--------

.. tab-set::

   .. tab-item:: Abstract methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~create_sphere_body`
            - Create a sphere body.
          * - :py:attr:`~create_extruded_body`
            - Create an extruded body.
          * - :py:attr:`~create_sweeping_profile_body`
            - Create a sweeping profile body.
          * - :py:attr:`~create_sweeping_chain`
            - Create a sweeping chain.
          * - :py:attr:`~sweep_with_guide`
            - Sweep with a guide.
          * - :py:attr:`~create_extruded_body_from_face_profile`
            - Create an extruded body from a face profile.
          * - :py:attr:`~create_extruded_body_from_loft_profiles`
            - Create an extruded body from loft profiles.
          * - :py:attr:`~create_planar_body`
            - Create a planar body.
          * - :py:attr:`~create_body_from_face`
            - Create a body from a face.
          * - :py:attr:`~create_surface_body`
            - Create a surface body.
          * - :py:attr:`~create_surface_body_from_trimmed_curves`
            - Create a surface body from trimmed curves.
          * - :py:attr:`~translate`
            - Translate a body.
          * - :py:attr:`~delete`
            - Delete a body.
          * - :py:attr:`~is_suppressed`
            - Check if a body is suppressed.
          * - :py:attr:`~get_color`
            - Get the color of a body.
          * - :py:attr:`~get_faces`
            - Get the faces of a body.
          * - :py:attr:`~get_edges`
            - Get the edges of a body.
          * - :py:attr:`~get_vertices`
            - Get the vertices of a body.
          * - :py:attr:`~get_volume`
            - Get the volume of a body.
          * - :py:attr:`~get_bounding_box`
            - Get the bounding box of a body.
          * - :py:attr:`~set_assigned_material`
            - Set the assigned material of a body.
          * - :py:attr:`~get_assigned_material`
            - Get the assigned material of a body.
          * - :py:attr:`~remove_assigned_material`
            - Remove the assigned material of a body.
          * - :py:attr:`~set_name`
            - Set the name of a body.
          * - :py:attr:`~set_fill_style`
            - Set the fill style of a body.
          * - :py:attr:`~set_suppressed`
            - Set the suppressed state of a body.
          * - :py:attr:`~set_color`
            - Set the color of a body.
          * - :py:attr:`~rotate`
            - Rotate a body.
          * - :py:attr:`~scale`
            - Scale a body.
          * - :py:attr:`~mirror`
            - Mirror a body.
          * - :py:attr:`~map`
            - Map a body.
          * - :py:attr:`~get_collision`
            - Get the collision of a body.
          * - :py:attr:`~copy`
            - Copy a body.
          * - :py:attr:`~get_tesellation`
            - Get the tessellation of a body.
          * - :py:attr:`~get_tesellation_with_options`
            - Get the tessellation of a body with options.
          * - :py:attr:`~boolean`
            - Boolean operation.
          * - :py:attr:`~combine`
            - Boolean operation through command.
          * - :py:attr:`~create_body_from_loft_profiles_with_guides`
            - Create a body from loft profiles with guides.
          * - :py:attr:`~combine_merge`
            - Combine and merge bodies.
          * - :py:attr:`~assign_midsurface_thickness`
            - Assign a thickness to a midsurface body.
          * - :py:attr:`~assign_midsurface_offset`
            - Assign a offset to a midsurface body.
          * - :py:attr:`~shell`
            - Shell a body.
          * - :py:attr:`~remove_faces`
            - Remove faces from a body.
          * - :py:attr:`~imprint_curves`
            - Imprint curves on a body.
          * - :py:attr:`~project_curves`
            - Project curves on a body.
          * - :py:attr:`~imprint_projected_curves`
            - Imprint projected curves on a body.
          * - :py:attr:`~get_full_tessellation`
            - Get the full tessellation of a body.



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~split_body`
            - Split a body.








Import detail
-------------

.. code-block:: python

    from ansys.geometry.core._grpc._services.base.bodies import GRPCBodyService



Method detail
-------------

.. py:method:: create_sphere_body(**kwargs) -> dict
   :abstractmethod:


   
   Create a sphere body.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_extruded_body(**kwargs) -> dict
   :abstractmethod:


   
   Create an extruded body.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_sweeping_profile_body(**kwargs) -> dict
   :abstractmethod:


   
   Create a sweeping profile body.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_sweeping_chain(**kwargs) -> dict
   :abstractmethod:


   
   Create a sweeping chain.
















   ..
       !! processed by numpydoc !!

.. py:method:: sweep_with_guide(**kwargs) -> dict
   :abstractmethod:


   
   Sweep with a guide.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_extruded_body_from_face_profile(**kwargs) -> dict
   :abstractmethod:


   
   Create an extruded body from a face profile.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_extruded_body_from_loft_profiles(**kwargs) -> dict
   :abstractmethod:


   
   Create an extruded body from loft profiles.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_planar_body(**kwargs) -> dict
   :abstractmethod:


   
   Create a planar body.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_body_from_face(**kwargs) -> dict
   :abstractmethod:


   
   Create a body from a face.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_surface_body(**kwargs) -> dict
   :abstractmethod:


   
   Create a surface body.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_surface_body_from_trimmed_curves(**kwargs) -> dict
   :abstractmethod:


   
   Create a surface body from trimmed curves.
















   ..
       !! processed by numpydoc !!

.. py:method:: translate(**kwargs) -> dict
   :abstractmethod:


   
   Translate a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: delete(**kwargs) -> dict
   :abstractmethod:


   
   Delete a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: is_suppressed(**kwargs) -> dict
   :abstractmethod:


   
   Check if a body is suppressed.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_color(**kwargs) -> dict
   :abstractmethod:


   
   Get the color of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_faces(**kwargs) -> dict
   :abstractmethod:


   
   Get the faces of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_edges(**kwargs) -> dict
   :abstractmethod:


   
   Get the edges of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_vertices(**kwargs) -> dict
   :abstractmethod:


   
   Get the vertices of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_volume(**kwargs) -> dict
   :abstractmethod:


   
   Get the volume of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_bounding_box(**kwargs) -> dict
   :abstractmethod:


   
   Get the bounding box of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_assigned_material(**kwargs) -> dict
   :abstractmethod:


   
   Set the assigned material of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_assigned_material(**kwargs) -> dict
   :abstractmethod:


   
   Get the assigned material of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: remove_assigned_material(**kwargs) -> dict
   :abstractmethod:


   
   Remove the assigned material of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_name(**kwargs) -> dict
   :abstractmethod:


   
   Set the name of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_fill_style(**kwargs) -> dict
   :abstractmethod:


   
   Set the fill style of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_suppressed(**kwargs) -> dict
   :abstractmethod:


   
   Set the suppressed state of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_color(**kwargs) -> dict
   :abstractmethod:


   
   Set the color of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: rotate(**kwargs) -> dict
   :abstractmethod:


   
   Rotate a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: scale(**kwargs) -> dict
   :abstractmethod:


   
   Scale a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: mirror(**kwargs) -> dict
   :abstractmethod:


   
   Mirror a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: map(**kwargs) -> dict
   :abstractmethod:


   
   Map a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_collision(**kwargs) -> dict
   :abstractmethod:


   
   Get the collision of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: copy(**kwargs) -> dict
   :abstractmethod:


   
   Copy a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_tesellation(**kwargs) -> dict
   :abstractmethod:


   
   Get the tessellation of a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_tesellation_with_options(**kwargs) -> dict
   :abstractmethod:


   
   Get the tessellation of a body with options.
















   ..
       !! processed by numpydoc !!

.. py:method:: boolean(**kwargs) -> dict
   :abstractmethod:


   
   Boolean operation.
















   ..
       !! processed by numpydoc !!

.. py:method:: combine(**kwargs) -> dict
   :abstractmethod:


   
   Boolean operation through command.
















   ..
       !! processed by numpydoc !!

.. py:method:: split_body(**kwargs) -> dict

   
   Split a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_body_from_loft_profiles_with_guides(**kwargs) -> dict
   :abstractmethod:


   
   Create a body from loft profiles with guides.
















   ..
       !! processed by numpydoc !!

.. py:method:: combine_merge(**kwargs) -> dict
   :abstractmethod:


   
   Combine and merge bodies.
















   ..
       !! processed by numpydoc !!

.. py:method:: assign_midsurface_thickness(**kwargs) -> dict
   :abstractmethod:


   
   Assign a thickness to a midsurface body.
















   ..
       !! processed by numpydoc !!

.. py:method:: assign_midsurface_offset(**kwargs) -> dict
   :abstractmethod:


   
   Assign a offset to a midsurface body.
















   ..
       !! processed by numpydoc !!

.. py:method:: shell(**kwargs) -> dict
   :abstractmethod:


   
   Shell a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: remove_faces(**kwargs) -> dict
   :abstractmethod:


   
   Remove faces from a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: imprint_curves(**kwargs) -> dict
   :abstractmethod:


   
   Imprint curves on a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: project_curves(**kwargs) -> dict
   :abstractmethod:


   
   Project curves on a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: imprint_projected_curves(**kwargs) -> dict
   :abstractmethod:


   
   Imprint projected curves on a body.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_full_tessellation(**kwargs) -> dict
   :abstractmethod:


   
   Get the full tessellation of a body.
















   ..
       !! processed by numpydoc !!




